# type-state-builder

./: CHANGELOG.md  Cargo.toml  README.md
.context-engine/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: const-builder-implementation-plan.md
examples/: api_test.rs  basic_usage.rs  builder_method.rs  const_builder.rs  converter_demo.rs  custom_defaults.rs  generics.rs  impl_into_demo.rs  option_ergonomics.rs  optional_only.rs
proptest-regressions/attributes/: field_attrs.txt
src/: lib.rs
tests/: associated_type_test.rs  basic_functionality.rs  builder_method_test.rs  complex_generics_integration.rs  comprehensive_edge_cases.rs  const_builder_test.rs  converter_comprehensive.rs  converter_generics_bounds.rs  custom_setter_functions.rs  debug_const_test.rs  debug_field_name.rs  debug_generic_associated_types.rs  debug_minimal_generic.rs  debug_raw_identifier.rs  debug_struct_without_derive.rs  doctest_debug.rs  error_conditions_and_boundaries.rs  final_verification.rs  generic_bounds_test.rs  generic_parameter_tests.rs  impl_into_integration.rs  minimal_const_test.rs  minimal_test.rs  no_derive_generic_test.rs  phantom_data_comprehensive.rs  progressive_assoc_test.rs  real_world_scenarios.rs  setter_prefix_integration.rs  simple_custom_setter.rs  simple_generic_fix.rs  standalone_generic_test.rs  test_basic_generics_refactored.rs  test_better_error.rs  test_clean_options_no_generics.rs  test_concrete_builder.rs  test_custom_build_method.rs  test_elided_lifetimes.rs  test_fix_verification.rs  test_mixed_options.rs  test_multiple_required.rs  (+17 more)
(+79 files in other folders)
